--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <a href="./private_profile_page.html">Task-1 Page</a>
 </head>
 <body>
     <h1>Hello</h1>
