add fvorite books page

--- a/favorite_books_page.html
+++ b/favorite_books_page.html
@@ -6,6 +6,15 @@
 </head>
 <body>
     <h1>My Favorite Books</h1>
-    
+    <dl>
+        <dt style="font-weight: 900; font-size: 24px;">Don Quixote</dt>
+        <dd style="font-size: 18px; font-weight: 600;">Miguel de Cervantes</dd>
+        <dd>a man and his 'squire' trying to prove that chivalry is not dead and aspiring to be heroes.</dd>
+
+        <dt style="font-weight: 900; font-size: 24px;">The Famous Five</dt>
+        <dd style="font-size: 18px; font-weight: 600;">Enid Blyton</dd>
+        <dd>The Famous Five is a series of children's adventure novels
+         and short stories written by English author Enid Blyton.</dd>
+    </dl>
 </body>
 </html>
