Add Adventure Blog Page, and add links to each page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <a href="./private_profile_page.html">Task-1 Page</a>
 </head>
 <body>
+    <a href="./favorite_books_page.html">Books</a>
+    <a href="./adventure_blog_page.html">Adventure Blog</a>
+    <a href="./private_profile_page.html">Priv.Profile</a>
+    <a href="./recipes.html">Recipes</a>
     <h1>Hello</h1>
 </body>
 </html>
