--- a/favorite_books_page.html
+++ b/favorite_books_page.html
@@ -5,6 +5,10 @@
     <title>Favorite Books Page</title>
 </head>
 <body>
+    <a href="./index.html">Main Page</a>
+    <a href="./adventure_blog_page.html">Adventure Blog</a>
+    <a href="./private_profile_page.html">Priv.Profile</a>
+    <a href="./recipes.html">Recipes</a>
     <h1>My Favorite Books</h1>
     <dl>
         <dt style="font-weight: 900; font-size: 24px;">Don Quixote</dt>
