--- a/private_profile_page.html
+++ b/private_profile_page.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <a href="./index.html">Task-1 Page</a>
         <meta charset="UTF-8">
         <title>Private Profile Page</title>
     </head>
     <body>
+        <a href="./index.html">Main Page</a>
+        <a href="./adventure_blog_page.html">Adventure Blog</a>
+        <a href="./favorite_books_page.html">Books</a>
+        <a href="./recipes.html">Recipes</a>
         <h1>Maya Svaridze</h1>
         <h2>About Me</h2>
         <p>Name's Maya, no Maia or Maiko, I hate that, understood?! lovely.
