added interesting links page

--- a/favorite_books_page.html
+++ b/favorite_books_page.html
@@ -9,6 +9,7 @@
     <a href="./adventure_blog_page.html">Adventure Blog</a>
     <a href="./private_profile_page.html">Priv.Profile</a>
     <a href="./recipes.html">Recipes</a>
+    <a href="./favorite_books_page.html">Books</a>
     <h1>My Favorite Books</h1>
     <dl>
         <dt style="font-weight: 900; font-size: 24px;">Don Quixote</dt>
