--- a/private_profile_page.html
+++ b/private_profile_page.html
@@ -9,6 +9,7 @@
         <a href="./adventure_blog_page.html">Adventure Blog</a>
         <a href="./favorite_books_page.html">Books</a>
         <a href="./recipes.html">Recipes</a>
+        <a href="./favorite_books_page.html">Books</a>
         <h1>Maya Svaridze</h1>
         <h2>About Me</h2>
         <p>Name's Maya, no Maia or Maiko, I hate that, understood?! lovely.
