--- a/recipes.html
+++ b/recipes.html
@@ -9,6 +9,7 @@
     <a href="./adventure_blog_page.html">Adventure Blog</a>
     <a href="./private_profile_page.html">Priv.Profile</a>
     <a href="./favorite_books_page.html">Books</a>
+    <a href="./interesting_links_page.html">Interesting Links Page</a>
     <h1>Pizza Recipe</h1>
     <p>Pizza Recipe, normal</p>
     <h2>Ingredients</h2>
