--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="./adventure_blog_page.html">Adventure Blog</a>
     <a href="./private_profile_page.html">Priv.Profile</a>
     <a href="./recipes.html">Recipes</a>
+    <a href="./favorite_books_page.html">Books</a>
     <h1>Hello</h1>
 </body>
 </html>
